
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int isvariableterm (char const) ;

__attribute__((used)) static inline int parse_variable(const char **string, char *buffer, size_t len) {
    const char *s = *string;


    if(*s == '$') {
        size_t i = 0;
        s++;

        if(*s == '{') {


            s++;
            while (*s && *s != '}' && i < len)
                buffer[i++] = *s++;

            if(*s == '}')
                s++;
        }
        else {


            while (*s && !isvariableterm(*s) && i < len)
                buffer[i++] = *s++;
        }

        buffer[i] = '\0';

        if (buffer[0]) {
            *string = s;
            return 1;
        }
    }

    return 0;
}
